SONARPY-4319 Fix failing deprecated rules tests (#1222)
GitOrigin-RevId: b6a5957be1eb02baefb748d296f07087444288ac